# agent_kernel

./: .env.example  .gitignore  README.md  pyproject.toml
agent_kernel/: __init__.py  actions.py  benchmark_synthesis.py  capabilities.py  capability_improvement.py  config.py  context_budget.py  curriculum.py  curriculum_catalog.py  curriculum_improvement.py  cycle_runner.py  delegation_improvement.py  delegation_policy.py  episode_store.py  export_governance.py  extractors.py  improvement.py  improvement_catalog.py  improvement_common.py  improvement_confirmation.py  improvement_engine.py  improvement_evidence.py  improvement_records.py  improvement_retention.py  job_queue.py  kernel_catalog.py  learning_compiler.py  llm.py  loop.py  memory.py  multi_agent.py  operator_policy.py  operator_policy_improvement.py  policy.py  policy_improvement.py  preflight.py  prompt_improvement.py  prompt_policy_shared.py  recovery_improvement.py  reflection.py  (+28 more)
agent_kernel_rust_wasm/: Cargo.toml
config/: a7_unfamiliar_transfer_manifest.json
datasets/: curriculum_templates.json  improvement_catalog.json  kernel_metadata.json
docs/: Autogenesis_protocol.md  ai_agent_status.md  architecture.md  asi_boundary_auxiliary_audit.md  asi_closure_map.md  asi_closure_work_queue.md  asi_core.md  asi_evolve_kernel_fit.md  asi_runtime_minimum_audit.md  autonomy_levels.md  codex_asi_campaign_lanes.md  codex_input_packets.md  coding_agi_gap_map.md  improvement.md  index.md  kernel_gap_dashboard.md  lane3_minimum_self_improving_asi_audit.md  live_evidence_proof_gap_audit.md  product_roadmap.md  (+17 more)
(+508 files in other folders)
