[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-kernel"
version = "0.1.0"
description = "Minimal verifier-driven coding agent kernel"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[tool.setuptools.packages.find]
include = ["agent_kernel*", "evals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
